--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 0.25rem;
 }
 
 h1 {
@@ -45,18 +44,30 @@ h3 {
   text-align: center;
 }
 
-p {
+p,
+label,
+select,
+option {
   font-size: 0.8rem;
   color: #333;
   text-align: center;
   margin: 0;
+  padding: 5px;
+}
+
+.container {
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
+  max-height: 50vh;
+  display: flex;
 }
 
 #inputs {
-  height: 60vh;
-  width: 30vw;
-  padding: 10px 30px;
-  background-color: #eee;
+  height: 100%;
+  width: 60%;
+  padding: 20px 10px 10px 10px;
+  background-color: #fafafa;
   border-radius: 15px 0 0 15px;
 
   display: flex;
@@ -65,7 +76,17 @@ p {
   align-items: space-between;
 }
 
-#inputs span {
+input {
+  width: 60%;
+  font-size: 0.7rem;
+  background-color: #0001;
+  padding: 5px 10px;
+  border: none;
+  border-bottom: 1px solid #888;
+  border-radius: 3px 3px 0 0;
+}
+
+#inputs > span {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -74,17 +95,25 @@ p {
   padding: 10px;
 }
 
+#inputs p span {
+  font-weight: 600;
+}
+
+select {
+  width: 25%;
+}
+
 #outputs {
-  height: 60vh;
-  width: 20vw;
+  height: 100%;
+  width: 40%;
 
-  background-color: #eee;
+  background-color: #f1f1f1;
   border-radius: 0 15px 15px 0;
-
-  padding: 10px;
+  padding: 20px 10px 10px 10px;
 }
 #result-frame {
   padding: 0;
+  margin: 0;
   height: 90%;
   width: 100%;
   overflow-y: scroll;
@@ -100,4 +129,20 @@ li {
   list-style: none;
   padding: 7px;
   padding-left: 10px;
+  border-bottom: solid 1px #ddd;
+}
+
+#generatePDF {
+  padding: 10px 25px;
+  margin: 20px auto;
+  background-color: #3338;
+  color: #eee;
+  border-radius: 10px;
+  font-size: 0.7rem;
+  border: none;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+#generatePDF:hover {
+  background-color: #333e;
 }
