--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ html {
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
+  margin: 0;
+  height: 100%;
+  width: 100%;
 
   background-color: #dadcda;
 
