--- a/style.css
+++ b/style.css
@@ -138,8 +138,8 @@ li {
 #generatePDF {
   padding: 10px 25px;
   margin: 20px auto;
-  background-color: #3338;
-  color: #eee;
+  background-color: #333a;
+  color: #fff;
   border-radius: 10px;
   font-size: 0.7rem;
   border: none;
