--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   height: 100%;
   width: 100%;
 
-  background-image: url(./main-bg.png);
+  background-image: url(./main-bg.jpg);
   background-size: cover;
   background-position: center center;
 
